# helm

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
docs/: architecture.md  dimensions.md  resources.md  run-data-contract.md
experiments/hub-spoke-parallel-build-c2e0a21d/: metadata.json  scores.json
experiments/hub-spoke-parallel-build-c2e0a21d/transcripts/: full.md
experiments/hub-spoke-parallel-build-c2e0a21d/workspace/: pyproject.toml
experiments/hub-spoke-parallel-build-c2e0a21d/workspace/src/: rename.py
experiments/hub-spoke-parallel-build-c2e0a21d/workspace/src/filekit/: __init__.py  cli.py  utils.py
experiments/hub-spoke-parallel-build-c2e0a21d/workspace/src/filekit/commands/: __init__.py  dedupe.py  find.py  rename.py  stats.py
judges/: context-degradation.md  escalation-calibration.md  failure-suppression.md  goal-drift.md  resource-waste.md
patterns/: experiment-hub-spoke-parallel-build.yaml  experiment-hub-spoke-penguins.yaml  experiment-peer-adversarial-data.yaml  experiment-peer-cli.yaml  experiment-peer-constraint-puzzle.yaml  experiment-peer-demand.yaml  experiment-peer-penguins.yaml  hub-and-spoke.yaml  peer-network.yaml
scripts/: generate_messy_sales.py  generate_scheduling_problem.py
src/helm/: __init__.py  cli.py  collector.py  config.py  experiment.py  judge.py  orchestrator.py  run_data.py  runtime_guard.py  sdk.py
src/helm/coordination/: __init__.py  base.py  factory.py  filesystem_nudge.py
tests/: test_coordination_backend.py  test_experiment_outcome.py  test_run_data.py  test_runtime_guard.py
(+13 files in other folders)
